# transbook

./: .gitignore  README.md  chapter31.txt  pyproject.toml
backend/: generate_report.py  input.txt  main.py  parse_dictionary.py  parse_subtlex.py  process_raw_text.py  word_definition.py
backend/static/: define-word.js  define-word.umd.cjs
backend/templates/: index.html
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: DefineWord.stories.tsx  DefineWord.tsx  custom-elements.d.ts  main.tsx
frontend/src/stories/: DefineWord.stories.tsx  DefineWordWC.stories.tsx
output/: report.html
output/static/: define-word.js  define-word.umd.js
