[project]
name = "transbook"
version = "0.1.0"
description = ""
authors = [
    {name = "Dalton Ma",email = "85321730+bohrium2b@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "pypinyin (>=0.55.0,<0.56.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "easynmt (>=2.0.2,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "pyglossary (>=5.1.0,<6.0.0)",
    "chardet (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
